2009-01-22  Werner Koch  <wk@g10code.com>

	* random.c (_gcry_random_deinit_external_test): Do not return a
	value.  Reported Albert Chin.

2008-09-16  Werner Koch  <wk@g10code.com>

	* random-fips.c (x931_aes_driver): No re-seeding with test contexts.
	(_gcry_rngfips_init_external_test): Fix setting of test_dt_ptr.
	(struct rng_context): Add flag TEST_NO_DUP_CHECK.
	(x931_aes_driver): Use that flag.
	(_gcry_rngfips_init_external_test): Add arg FLAGS and use it to
	modify the test.
	* random.c (_gcry_random_init_external_test): Pass FLAGS.

2008-09-15  Werner Koch  <wk@g10code.com>

	* random.c (_gcry_random_init_external_test): New.
	(_gcry_random_run_external_test): New. 
	(_gcry_random_deinit_external_test): New.
	* random-fips.c (struct rng_context): Turn TEST_DT_COUNTER into a
	32 bit integer.
	(x931_get_dt): Ditto.
	(selftest_kat): Intialize it accordingly.
	(_gcry_rngfips_init_external_test): New.
	(_gcry_rngfips_run_external_test): New. 
	(_gcry_rngfips_deinit_external_test): New.

2008-09-05  Werner Koch  <wk@g10code.com>

	* random.c (_gcry_random_selftest): Return success if not in fips
	mode.

2008-09-01  Werner Koch  <wk@g10code.com>

	* random-fips.c (x931_get_dt) [W32]: Do not use getppid.
	(get_entropy): Prepare for use under Windows.
	(_gcry_rngfips_selftest): Ditto.
	(entropy_collect_cb): Make sure that the gatherer never overflows
	the buffers.

2008-08-29  Werner Koch  <wk@g10code.com>

	* random-fips.c (SEED_TTL): New.
	(struct rng_context): Add USE_COUNTER, remove NEED_STRONG_ENTROPY.
	(x931_aes_driver): Do re-seeding if required.
	(x931_generate_key, x931_generate_seed): Factor common code out to ..
	(get_entropy): .. new.  Always use /dev/random.
	(x931_generate_key): Seed key for nonce_context from std_rng_context.
	(x931_reseed): New. Seed nonce context from std_rng_context.
	(get_random): Use x931_reseed.
	(_gcry_rngfips_selftest): Return an error if no /dev/radom support
	has been compiled in.
	(get_random): Remove locking.