@@ -1,5 +1,8 @@
 2009-07-02  Werner Koch  <wk@g10code.com>
 
+	* fips.c (_gcry_initialize_fips_mode): Do not use FIPS mode if
+	/proc/.../fips_enabled has insufficient permissions.
+
 	* dumpsexp.c (main): Fix handling multiple files.
 	(parse_and_print): Implement hex and octal escaping.
 
