@@ -1,3 +1,7 @@
+2009-07-02  Werner Koch  <wk@g10code.com>
+
+	* rndhw.c (poll_padlock): Asm change from Fedora.
+
 2009-01-22  Werner Koch  <wk@g10code.com>
 
 	* random.c (_gcry_random_deinit_external_test): Do not return a
@@ -125,4 +129,4 @@
  This file is distributed in the hope that it will be useful, but
  WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
  implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
-	
+
